--- a/tiendamusical-web/src/main/webapp/pages/commons/navbar.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/navbar.xhtml
@@ -4,12 +4,15 @@
       xmlns:f="http://java.sun.com/jsf/core"      
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://java.sun.com/jsf/facelets"> <!-- permite incluir contenido de otras pantallas para usar scripts.xhtml-->
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+       xmlns:pe="http://primefaces.org/ui/extensions"> <!-- permite incluir contenido de otras pantallas para usar scripts.xhtml-->
 
 
-   <p:menubar id="menubar" style="background-color: black">
+   <p:menubar id="menubar" style="background-color: black;padding:5px;">
    		<f:facet name="options">
-   			<p:commandButton id="btnShopping" icon="pi pi-shopping-cart"></p:commandButton>
+   			<p:commandButton id="btnShopping" icon="pi pi-shopping-cart">
+   				<pe:badge content="10" rendered="true"> </pe:badge>
+   			</p:commandButton>
    			<p:commandButton id="btnCerrarSesion" icon="pi pi-sign-in" action="#{sessionClosed.cerrarSesion}"></p:commandButton>
    		</f:facet>
    
