--- a/tiendamusical-web/src/main/webapp/pages/cliente/detalle.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/detalle.xhtml
@@ -75,9 +75,10 @@
 										<f:convertNumber type="currency" currencyCode="CLP" currencySymbol="$"></f:convertNumber>
 										</h:outputLabel>
 										
-										<p:commandButton icon="pi pi-shopping-cart"></p:commandButton>
+										<p:commandButton icon="pi pi-shopping-cart" 
+										action="#{detalleController.agregarAlbumCarrito(sessionBean.artistaAlbumDTO)}" update="formDetalle:btnShopping"></p:commandButton>
 										
-										<p:selectOneMenu id="cboCantidad">
+										<p:selectOneMenu id="cboCantidad" value="#{detalleController.cantidadAlbumSeleccionada}">
 											<f:selectItem itemValue="1" itemLabel="1" noSelectionOption="true"></f:selectItem>
 											<f:selectItem itemValue="2" itemLabel="2" ></f:selectItem>
 											<f:selectItem itemValue="3" itemLabel="3" ></f:selectItem>
