se agrega paypal

--- a/tiendamusical-web/src/main/webapp/pages/cliente/detalle.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/detalle.xhtml
@@ -72,7 +72,7 @@
 										<p:outputLabel value="Precio " style="color:white"></p:outputLabel>
 
 										<h:outputLabel  value="#{sessionBean.artistaAlbumDTO.album.valor}" style="color:white">
-										<f:convertNumber type="currency" currencyCode="CLP" currencySymbol="$"></f:convertNumber>
+										<f:convertNumber type="currency" currencyCode="USD" currencySymbol="$"></f:convertNumber>
 										</h:outputLabel>
 										
 										<p:commandButton icon="pi pi-shopping-cart" 
