--- a/tiendamusical-web/src/main/webapp/pages/commons/steps.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/steps.xhtml
@@ -11,7 +11,7 @@
 	<h:outputStylesheet library="css" name="steps.css"/>
 	
 	<div class="p-col" style="width:90%; margin:0px auto">
-	    <p:steps id="stepsCompra" style="margin-bottom: 20px;" activeIndex="0" readonly="">
+	    <p:steps id="stepsCompra" style="margin-bottom: 20px;" activeIndex="#{sessionBean.paso}" readonly="">
 	        <p:menuitem value="Productos Seleccionados"/>
 	        <p:menuitem value="Realizar Pago"/>
 	        <p:menuitem value="Confirmación"/>
