se implementa funcion de guardar factura en bd

--- a/tiendamusical-web/src/main/webapp/pages/cliente/pago.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/pago.xhtml
@@ -39,6 +39,7 @@
 			onApprove: function(data, actions){
 				return actions.order.capture().then(function(detalle){
 					//generar factura con orden de compra
+					finalizarTransaccion();
 				})
 			}
 		}).render('#divPayPalContainer');</script>
@@ -78,7 +79,7 @@
 
 							<div class="p-col" style="width: 90%;margin: 0px auto; text-align: center;">
 								<div id="divPayPalContainer" class="p-col" style="width: 100%; margin: 0px auto;">                            
-								
+									<p:remoteCommand name="finalizarTransaccion" action="#{pagoController.guardarFactura}"></p:remoteCommand>
 								
 								</div>
 							</div>
