--- a/tiendamusical-web/src/main/webapp/pages/commons/header.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/header.xhtml
@@ -9,7 +9,7 @@
 
 	<div class="p-col-12 p-md-2" style="background-color: black">
 		<!-- <p:outputLabel value="#{sessionBean.persona.nombre}" style="color:white"></p:outputLabel> -->
-		<p:commandLink>
+		<p:commandLink action="#{paginaController.irPagina('/pages/commons/dashboard.xhtml')}">
 			<p:graphicImage name="imagenes/fondo_musica.png" width="60%"
 				style="display:block; margin-left:auto; margin-right: auto;">
 			</p:graphicImage>
