project tiendamusical-v1.9_misCompras_infoPersonal se agrega funcionalidad para ver mis compras realizadas y actualizar los datos personales del cliente

--- a/tiendamusical-web/src/main/webapp/pages/commons/header.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/header.xhtml
@@ -6,10 +6,11 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets"> <!-- permite incluir contenido de otras pantallas para usar scripts.xhtml-->
 
+<!-- immediate="true" sirbe para que en pagina de guardar persona no valide estos botones y funcionen -->
 
 	<div class="p-col-12 p-md-2" style="background-color: black">
 		<!-- <p:outputLabel value="#{sessionBean.persona.nombre}" style="color:white"></p:outputLabel> -->
-		<p:commandLink action="#{paginaController.irPagina('/pages/commons/dashboard.xhtml')}">
+		<p:commandLink action="#{paginaController.irPagina('/pages/commons/dashboard.xhtml')}" immediate="true">
 			<p:graphicImage name="imagenes/fondo_musica.png" width="60%"
 				style="display:block; margin-left:auto; margin-right: auto;">
 			</p:graphicImage>
