--- a/tiendamusical-web/src/main/webapp/pages/commons/navbar.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/navbar.xhtml
@@ -11,10 +11,12 @@
 
    <p:menubar id="menubar" style="background-color: black;padding:5px;">
    		<f:facet name="options">
+   		
    			<p:commandButton id="btnShopping" icon="pi pi-shopping-cart" immediate="true"
-   			action="#{navBarController.redireccionar}">
+   			action="#{navBarController.redireccionar}" rendered="#{sessionBean.persona.rol.idRol == 4}">
    				<pe:badge content="#{sessionBean.persona.carrito.carritosAlbum.size()}" rendered="#{sessionBean.persona.carrito.carritosAlbum.size() > 0}"> </pe:badge>
    			</p:commandButton>
+   			
    			<p:commandButton id="btnCerrarSesion" icon="pi pi-sign-in" action="#{sessionClosed.cerrarSesion}" immediate="true"></p:commandButton>
    		</f:facet>
    </p:menubar>
