--- a/tiendamusical-web/src/main/webapp/pages/admin/home.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/admin/home.xhtml
@@ -8,9 +8,10 @@
 
 
 	<div class="p-grid">
-		<div class="p-col">
+		<div class="p-col-10" style="margin: 0px auto">
 			<div class="box" style="background-color: white;">
 				<p:outputLabel value="HOME ADMIN"></p:outputLabel>
+				
 			
 					<p:barChart model="#{homeController.barChartModel}" style=" width:100%; height:500px;"/>
 			
