project se agrega mantenedor de artista con combos relacionados de genero y subgenero

--- a/tiendamusical-web/src/main/webapp/pages/admin/albums.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/admin/albums.xhtml
@@ -103,7 +103,7 @@
 								</p:column>
 
 								<p:column headerText="Artista" filterBy="#{album.nombre}" filterMatchMode="contains">
-									<p:outputLabel value="album.artista.nombre"></p:outputLabel>
+									<p:outputLabel value="#{album.artista.nombre}"></p:outputLabel>
 								</p:column>
 								
 								<p:column headerText="Año" filterBy="#{album.anio}" filterMatchMode="contains">
