--- a/tiendamusical-web/src/main/webapp/pages/commons/panelmenu.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/panelmenu.xhtml
@@ -20,7 +20,7 @@
                 rendered="#{sessionBean.persona.rol.idRol == 4}"/>
                 	
                 <p:menuitem immediate="true" value="Albums"  icon="pi pi-spinner" action="#{paginaController.irPagina('/pages/admin/albums.xhtml')}" rendered="#{sessionBean.persona.rol.idRol == 3}"/>
-                <p:menuitem immediate="true" value="Artistas"  icon="pi pi-users" rendered="#{sessionBean.persona.rol.idRol == 3}"/>
+                <p:menuitem immediate="true" value="Artistas"  icon="pi pi-users" action="#{paginaController.irPagina('/pages/admin/artistas.xhtml')}" rendered="#{sessionBean.persona.rol.idRol == 3}"/>
                 <p:menuitem immediate="true" value="Perfiles"  icon="pi pi-lock" rendered="#{sessionBean.persona.rol.idRol == 3}"/>
                   
             </p:submenu>
