se agrega mantenedores de perfiles y registro de usuario

--- a/tiendamusical-web/src/main/webapp/pages/cliente/confirmacion.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/confirmacion.xhtml
@@ -29,6 +29,9 @@
 
 	<div class="ui-fluid">
 		<h:form id="formConfirmacion">
+			
+			<ui:include src="/pages/commons/loading.xhtml"></ui:include>
+
 
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
 
