--- a/tiendamusical-web/src/main/webapp/pages/cliente/infopersonal.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/infopersonal.xhtml
@@ -24,6 +24,8 @@ body .ui-panelgrid .ui-panelgrid-cell {
 	<div class="ui-fluid">
 		<h:form id="formInfoPersonal">
 
+			<ui:include src="/pages/commons/loading.xhtml"></ui:include>
+			
 			<p:growl id="messages" showSummary="true" showDetail="true" skipDetailIfEqualsSummary="true"/> 
 
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
