--- a/tiendamusical-web/src/main/webapp/pages/cliente/pago.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/pago.xhtml
@@ -64,6 +64,8 @@
 	<div class="ui-fluid">
 		<h:form id="formPago">
 
+			<ui:include src="/pages/commons/loading.xhtml"></ui:include>
+			
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
 
 			<div class="p-grid sample-layout">
