--- a/tiendamusical-web/src/main/webapp/pages/cliente/carrito.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/carrito.xhtml
@@ -32,6 +32,8 @@ body .ui-panelgrid .ui-panelgrid-cell {
 	<div class="ui-fluid">
 		<h:form id="formCarrito">
 
+		<ui:include src="/pages/commons/loading.xhtml"></ui:include>
+
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
 
 			<div class="p-grid sample-layout">
