--- a/tiendamusical-web/src/main/webapp/pages/cliente/detalle.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/detalle.xhtml
@@ -30,6 +30,8 @@
 	<div class="ui-fluid">
 		<h:form id="formDetalle">
 
+		<ui:include src="/pages/commons/loading.xhtml"></ui:include>
+		
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
 
 			<div class="p-grid sample-layout">
