--- a/tiendamusical-web/src/main/webapp/pages/cliente/miscompras.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/cliente/miscompras.xhtml
@@ -23,7 +23,9 @@ body .ui-panelgrid .ui-panelgrid-cell {
 
 	<div class="ui-fluid">
 		<h:form id="formMisCompras">
-
+			
+			<ui:include src="/pages/commons/loading.xhtml"></ui:include>
+			
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
 
 			<div class="p-grid sample-layout">
